<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37386E"
    tools:context=".SignupActivity">
    <include layout="@layout/appbar"
        android:id="@+id/signup_tool_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="208dp"
                android:layout_marginTop="92dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/signup" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="361dp"
                android:layout_height="450dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_login"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:paddingBottom="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="350dp"
                        android:layout_height="57dp"
                        android:layout_gravity="center"
                        android:paddingEnd="10dp"
                        android:background="@drawable/background_edittext"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="10dp"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingBottom="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="350dp"
                        android:layout_height="57dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_edittext"
                        android:paddingEnd="10dp"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="10dp"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:paddingBottom="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextPersonName3"
                        android:layout_width="350dp"
                        android:layout_height="57dp"
                        android:layout_gravity="center"
                        android:paddingEnd="10dp"
                        android:background="@drawable/background_edittext"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="10dp"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:paddingBottom="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextPersonName4"
                        android:layout_width="350dp"
                        android:layout_height="57dp"
                        android:layout_gravity="center"
                        android:paddingEnd="10dp"
                        android:background="@drawable/background_edittext"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="10dp"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="234dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/buttons_css"
                    android:text="@string/sign_up"
                    android:textColor="#FFFFFFFF"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/haveAccount"
                    android:layout_gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textSize="22sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>