<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    tools:context=".Profile">
    <include layout="@layout/appbar"
        android:id="@+id/profile_tool_bar"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_photo_image_view"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:shapeAppearanceOverlay="@style/circular"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/change_photo_floating_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/yellow"
        android:clickable="true"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/profile_photo_image_view"
        app:layout_constraintEnd_toEndOf="@+id/profile_photo_image_view"
        app:srcCompat="@drawable/baseline_camera_24" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="361dp"
        android:layout_height="430dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_login"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo_image_view">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:paddingBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_user_name"
                android:layout_width="350dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:paddingEnd="10dp"
                android:drawableEnd="@drawable/baseline_edit_24"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="350dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:background="@drawable/background_edittext"
                android:paddingEnd="10dp"
                android:drawableEnd="@drawable/baseline_edit_24"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="350dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:paddingEnd="10dp"
                android:drawableEnd="@drawable/baseline_edit_24"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:paddingBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="350dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:paddingEnd="10dp"
                android:drawableEnd="@drawable/baseline_edit_24"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
            <Button
                android:id="@+id/save_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/buttons_css"
                android:text="Save"
                android:textAllCaps="false"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.279" />
            <Button
                android:id="@+id/cancel_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:background="@drawable/button_yellow"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.279" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>